fix: fix some layout problems

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,7 +11,6 @@
 
 html {
     font-size: 16px;
-    font-family: 'Ubuntu', sans-serif;
 }
 
 input:focus {
